# dotnet-angular-bazel-sample

./: .bazelrc  README.md  WORKSPACE  azure-pipelines.yml  package.json  test.sh
API/Car/: BUILD.bazel  CarController.cs  Program.cs  Startup.cs
API/TopSpeed/: BUILD.bazel  Program.cs  SpeedController.cs  Startup.cs
Friends/: BUILD.bazel
Integration-Tests/: BUILD.bazel  FriendsControllerTests.cs
Integration-Tests/Api/Car/: BUILD.bazel  CarApiTests.cs
Integration-Tests/FriendsController/: BUILD.bazel
Integration-Tests/Helpers/: BUILD.bazel  RequestHelper.cs
Model/: Car.cs
UI/: BUILD.bazel  HomeController.cs  Startup.cs
UI/Client/: BUILD.bazel
UI/Client/Greeting/: greeting.component.html
UI/Hubs/: GreetingHub.cs
UI/Package/: package.bzl
friends/: azure-pipelines.yml
ui/: BUILD.bazel  HomeController.cs
ui/Client/: BUILD.bazel  app.component.html  app.routes.ts
ui/Client/AddressBook/: BUILD.bazel
ui/Client/Greeting/: BUILD.bazel  greeting.component.ts
ui/Client/Survey/: BUILD.bazel
ui/Client/Treeview/: BUILD.bazel
ui/hubs/: BUILD.bazel
