load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_xunit_test")

core_xunit_test(
    name = "custom_bin_test.dll",
    size = "medium",
    srcs = [
        "FriendsControllerTests.cs",
    ],
    data = [
        
    ],
    deps = [
       "@xunit.assert//:netcoreapp2.1_core",
        "@xunit.extensibility.core//:netcoreapp2.1_core",
        "@xunit.extensibility.execution//:netcoreapp3.1_core",
        "//UI:server.exe",
        "//Model:Friend.dll"
    ],
)