package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_binary")

load("//UI/Vendor:vendor.bzl", "vendor_bundle")
load("//UI/Package:package.bzl", "deployment_package")
load("@npm_bazel_terser//:index.bzl", "terser_minified")

vendor_bundle(
  name = "vendor",
  deps = [
    "@npm//:node_modules/zone.js/dist/zone.js",
    "@npm//:node_modules/@microsoft/signalr/dist/browser/signalr.js"
  ]
)

terser_minified(
    name = "vendor_min",
    src = ":vendor",
)

genrule(
    name = "bootstrap",
    srcs = ["//:node_modules/bootstrap/dist/css/bootstrap.min.css"],
    outs = ["bootstrap.min.css"],
    cmd = "cp $< $@",
)

genrule(
    name = "signalr",
    srcs = ["//:node_modules/@microsoft/signalr/dist/browser/signalr.min.js"],
    outs = ["signalr.min.js"],
    cmd = "cp $< $@",
)

core_binary(
    name = "server.exe",
    srcs = glob([
        "**/*.cs"
    ]),
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:Microsoft.AspNetCore.App",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset",
        "//Model:Friend.dll",
        "//UI/Hubs:GreetingHub.dll"
    ],
    data = [
      ":index.html",
      "//UI/Client:bundle-es2015.min",
      ":vendor_min",
      ":site.css",
      ":bootstrap"
    ]
)
