load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_xunit_test")

core_xunit_test(
    name = "FriendsControllerTests.dll",
    size = "medium",
    srcs = [
        "FriendsControllerTests.cs",
    ],
    data = [
        
    ],
    deps = [
       "@xunit.assert//:netcoreapp3.1_core",
        "@xunit.extensibility.core//:netcoreapp3.1_core",
        "@xunit.extensibility.execution//:netcoreapp3.1_core",
        "//UI:server.exe",
        "//Model:Friend.dll"
    ],
)