package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_library")

core_library(
  name = "GreetingHub.dll",
  srcs = [
      "GreetingHub.cs"
  ],
  deps = [
    "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset",
    "@io_bazel_rules_dotnet//dotnet/stdlib.core:Microsoft.AspNetCore.App",
  ]
)