package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    assets = ["greeting.component.html"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core",
         "//UI/Client/Shared",
         "@npm//@microsoft/signalr"
    ]
)